# FileIntegrityAnticheat-CORE

./: CMakeLists.txt  README.md
comments/: manual.txt  structure.txt
include/EchoEngine/modules/keylogger/: keylogger.h
src/: MainActivity.cpp
src/core/: Hash.cpp  Integrity.cpp  RuleEngine.h  Scanner.cpp
src/model/: FileRecord.h  Snapshot.h
src/modules/keylogger/: keylogger.cpp  main_keylogger.cpp
src/storage/: SnapshotStorage.cpp
